[package]
name = "beau_collector"
version = "0.2.0"
authors = ["tarquin-the-brave <tomsteavenson@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Collect up all errors into a single error"
homepage = "https://docs.rs/beau_collector"
documentation = "https://docs.rs/beau_collector"
repository = "https://github.com/tarquin-the-brave/beau-collector/"
readme = "README.md"
keywords = ["error", "collect", "handling", "result", "easy"]

[dependencies]
anyhow = "1.0.28"
itertools = "0.9.0"

[dev-dependencies]
serde_yaml = "0.8.11"
